k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: diplomka
spec:
  replicas: 1

  selector:
    matchLabels:
      app: diplomka

  template:
    metadata:
      labels:
        app: diplomka

    spec:
      securityContext:
        runAsUser: 1000
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: diplomka
          image: IMAGE_PLACEHOLDER

          ports:
            - containerPort: 8080

          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL

          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
