k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: diplomka
spec:
  type: ClusterIP

  selector:
    app: diplomka

  ports:
    - port: 80
      targetPort: 8080
