k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: diplomka
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - xhezel-diplomka.dyn.cloud.e-infra.cz
      secretName: xhezel-diplomka-dyn-cloud-e-infra-cz-tls

  rules:
    - host: xhezel-diplomka.dyn.cloud.e-infra.cz
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: diplomka
                port:
                  number: 80
